fixed long text overflow on add iamge button

--- a/src/assets/scss/70-overrides/_responsive-elements.scss
+++ b/src/assets/scss/70-overrides/_responsive-elements.scss
@@ -20,6 +20,10 @@ html {
 	padding: 0.5em 0.75em;
 	font-size: 1rem;
 	line-height: 1.25;
+	
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 	&.btn-outline-secondary {
 		border-color: transparent;
 	}
