--- a/src/assets/scss/appstack-overrides.scss
+++ b/src/assets/scss/appstack-overrides.scss
@@ -46,6 +46,7 @@ body {
 
 	svg {
 		fill: currentColor;
+		fill: silver;
 		height: 24px;
 		width: 127px;
 		margin-right: 0.625em;
